[gd_scene load_steps=3 format=3 uid="uid://dglqvqfg50bfm"]

[ext_resource type="Script" path="res://media_viewer/media_viewer_top_menu.gd" id="1_2nxba"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="1_yulfr"]

[node name="MediaViewerTopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_2nxba")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yulfr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FitToWindowButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Fit to Window"

[node name="100PercentButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "100%"

[node name="ViewerStretchMode" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Dynamic"
popup/item_1/text = "Always Fit to Window"
popup/item_1/id = 1
popup/item_2/text = "Always 100%"
popup/item_2/id = 2

[connection signal="pressed" from="HBoxContainer/FitToWindowButton" to="." method="_on_button_fit_to_window_pressed"]
[connection signal="pressed" from="HBoxContainer/100PercentButton" to="." method="_on_button_100_percent_pressed"]
[connection signal="item_selected" from="HBoxContainer/ViewerStretchMode" to="." method="_on_viewer_stretch_mode_item_selected"]
